# rs-simple-proxy

./: Cargo.toml  LICENSE  README.md
src/: config.rs  lib.rs
src/middlewares/: cors.rs  health.rs  logger.rs  logging.rs  mod.rs  router.rs  routing.rs
src/proxy/: error.rs  middleware.rs  mod.rs  service.rs
