[package]
name    = "simple_proxy"
edition = "2018"
version = "1.3.3"
authors = ["Terry Raimondo <terry.raimondo@gmail.com>"]
description = "Simple proxy with middlewares, easy to customize, easy to use."
license = "Apache-2.0"
homepage = "https://github.com/terry90/rs-simple-proxy"
repository = "https://github.com/terry90/rs-simple-proxy"

[package.metadata.docs.rs]
features = ["docs"]

[features]
router = ["regex", "serde_regex"]
health = []
cors = []
docs   = ["router", "health", "cors"]

[dependencies]
futures        = "0.3.5"
log            = "0.4.8"
chrono         = { version = "0.4.11", features = ["serde"] }
regex          = { version = "1.3.9", optional = true }
serde_regex    = { version = "1.1.0", optional = true }
serde_json     = "1.0.55"
serde_derive   = "1.0.112"
serde          = "1.0.112"
rand           = { version = "0.8.3", features = ["small_rng"] }
hyper          = { version = "0.14.5", features = ["client", "tcp", "http1", "server"] }
http           = "0.2.1"
